# cic-iot2023-detection-system

./: .gitignore  CLAUDE.md  Dockerfile  README.md  README_space.md  benchmark.py  build_results_cache.py  compare_splits_mlp.py  compare_splits_rf.py  config.py  evaluate.py  example.ipynb  hparams.json  ids_pipeline.ipynb  ingest.py  labels.py  make_report_figures.py  models.py  parquet_info.txt  preprocessing.py  pyproject.toml  regenerate_results.py  requirements.txt  requirements_space.txt  temp_labels.txt  train_rf8.py  train_trees.py  tune.py
attacks/: README.md  recon.sh  spoofed_flood.sh  swarm_entrypoint.sh  synflood.sh  udpflood.sh
demo/: README.md  app.py  cicflowmeter_runner.py  dpkt_extractor.py  explain.py  inference.py  sampler.py  validate_extractor.py
deploy/: README.md  analyzer.Dockerfile  attacker.Dockerfile  detector.Dockerfile  docker-compose.yml  mock_site.Dockerfile
docs/: ciciot2023.ipynb  deployment-insights.md  ids-final.ipynb  monitor-run-modes.html  monitoring-architecture.html
live_detector/: __init__.py  __main__.py  capture.py  config.py  detector.py  producers.py  service.py  synth.py  windower.py
memory/: MEMORY.md  user_profile.md
mock_site/: __init__.py  app.py
models/: feature_columns.joblib  ids_dnn_temporal_2class.pth  ids_dnn_temporal_8class.pth  perm_imp_global_test.joblib  scaler_temporal.joblib  temperature_scaling.joblib
scripts/: ab_cross_dataset.py  benchmark_latency.py  build_augmented_parquet.py  compare_kaggle_vs_canonical.py  extract_flow_presets.py  make_benign_sample.py  make_test_samples.py  (+3 more)
(+125 files in other folders)
