[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "cic-iot2023-ids"
version = "0.1.0"
description = "Real-time IDS for CIC-IoT-2023 (PyTorch MLP): training, on-demand analyzer, live monitor."
requires-python = ">=3.10"

[tool.setuptools.packages.find]
include = ["ids*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "needs_model: requires trained artifacts in models/ (auto-skipped when absent; run only these with -m needs_model)",
]
